# PAT3D

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  pat3d.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: environment-setup.yml  release-install.yml
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/server/: index.mjs
dashboard/src/: App.jsx  LayoutPoseMap2D.jsx  MeshPreview.jsx  RelationGraphEditor.jsx  SceneViewer.jsx  SegmentationEditor.jsx  SimulationPassTree.jsx  TrajectoryViewer3D.jsx  api.js  relationPalette.js  runtimeViewModel.js  stageBackends.host-compatible.json  stageBackends.json  styles.css
docker/: Dockerfile  Dockerfile.install
docs/: index.html  run.sh  stylesheet.css
modules/: __init__.py
modules/preprocess_utils/: __init__.py  low_poly.py  obj_gen.py
pat3d/: __init__.py  bbox_put_diff_low.py  bbox_put_high.py  bbox_put_low.py  default_legacy_config.py  legacy_config.py  phys_optim.py  preprocess.py
pat3d/cli/: __init__.py  run_pipeline.py  run_preprocess.py
pat3d/contracts/: __init__.py  providers.py
pat3d/metrics/: __init__.py
pat3d/models/: __init__.py  common.py  layout.py  objects.py  pose_utils.py  preprocess.py  scene.py
pat3d/pipelines/: __init__.py  factories.py  first_contract_slice.py  paper_core_pipeline.py
pat3d/preprocessing/: README.md  __init__.py  contain.py  depth.py  gpt.py  img.py  layout.py  low_poly.py  seg.py  (+6 more)
scripts/: build_docker_image.sh  run_dashboard.sh  run_docker_dashboard.sh  setup_docker_install.sh  setup_install.py
(+126 files in other folders)
